--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Te23 Gutenberguppgift, Frankenstein</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
         <p>
-            Det här är första kapittlett från Frankeinstein, en engelsk novell skriven av Mary Wollestonecraft Shelly, tagen från <a href="https://www.gutenberg.org/browse/scores/top?authuser=0">Project Gutenbergs top 100 mäst populära gratis böcker.</a>    
+            Det här är första kapitlet från Frankeinstein, en engelsk novell skriven av Mary Wollestonecraft Shelly, tagen från <a href="https://www.gutenberg.org/browse/scores/top?authuser=0">Project Gutenbergs top 100 mäst populära gratis böcker.</a>    
         </p>
         <h1>Frankenstein;</h1>
         <h3>or, the Modern Prometheus</h3>
